# ByteMyMood

./: .env.example  .gitignore  README.md  pyproject.toml
bytemymood/: agent.py  prompt.py  requirements.txt
bytemymood/profiles/: user_profile_default.json  user_profile_example.json  user_profile_example_with_recipe.json
bytemymood/shared_libraries/: constants.py  types.py
bytemymood/sub_agents/execution/: agent.py  prompt.py
bytemymood/sub_agents/inspiration/: agent.py  prompt.py
bytemymood/sub_agents/planning/: agent.py  prompt.py
bytemymood/tests/unit/: test_agents.py  test_image_generation.py  test_profile.py  test_tools.py  test_weather_api.py
bytemymood/tools/: memory.py  search.py  weather.py
bytemymood/tools/image_generation/: image_generation.py  image_generation_prompt.py
deployment/: local.py  remote.py
